Prevent hidden menu to cover any other pointer events on small screens

--- a/sass/header/_menu.scss
+++ b/sass/header/_menu.scss
@@ -34,6 +34,7 @@
         position: fixed;
         inset: 0;
         opacity: 0;
+        pointer-events: none;
         transition: opacity var(--menu-button-transition-duration);
       }
       li {
@@ -47,6 +48,7 @@
         &.open {
           + ul {
             opacity: 1;
+            pointer-events: initial;
             li {
               transform: translateY(0);
             }
